# zarrs_n5

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
data/: .gitignore  generate_data.py  generate_truncated_data  raw.npy
data/blosc.n5/: attributes.json
data/blosc.n5/0/: 0
data/bz2.n5/: attributes.json
data/bz2.n5/0/: 0
data/even_chunk.n5/: attributes.json
data/even_chunk.n5/0/: 0  1
data/even_chunk.n5/1/: 0  1
data/gzip.n5/: attributes.json
data/gzip.n5/0/: 0
data/single_chunk.n5/: attributes.json
data/single_chunk.n5/0/: 0
data/uneven_chunk.n5/: attributes.json
data/uneven_chunk.n5/1/: 0  1
data/uneven_chunk_padded.n5/0/: 0  1
data/uneven_chunk_truncated.n5/: attributes.json
data/uneven_chunk_truncated.n5/0/: 1
data/uneven_chunk_truncated.n5/1/: 0  1
data/zstd.n5/: attributes.json
data/zstd.n5/0/: 0
src/: chunk.rs  chunk_key_encoding.rs  codec.rs  convert.rs  error.rs  lib.rs  metadata.rs  storage.rs
src/codec/: default.rs  mod.rs
src/storage/: asynch.rs  mod.rs
tests/: read.rs
