[package]
name = "zarrs_n5"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
inventory = "0.3.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
zarrs = { version = "0.23.3", default-features = false, features = [
    "gzip",
    "transpose",
    "bz2",
    "blosc",
    "zstd",
] }
zarrs_codec = "0.2.0"

[dev-dependencies]
npyz = "0.8.4"
zarrs = { version = "0.23.3", features = ["filesystem"] }
