[package]
name = "zarrs_n5"
version = "0.1.0"
authors = ["Chris Barnes <chrislloydbarnes@gmail.com>"]
description = "N5 support for zarrs"
repository = "https://github.com/clbarnes/zarrs_n5"
license = "MIT"
edition = "2024"
rust-version = "1.91"
keywords = ["zarr", "n5", "storage", "array", "chunked"]
categories = ["multimedia::images", "multimedia::encoding", "parser-implementations"]

[dependencies]
async-trait = { version = "0.1.89", optional = true }
bytes = "1.11.1"
inventory = "0.3.22"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
zarrs = { version = "0.23.5", default-features = false, features = [
    "gzip",
    "transpose",
    "bz2",
    "blosc",
    "zstd",
] }
zarrs_codec = "0.2.0"

[features]
async = ["zarrs/async", "dep:async-trait"]

[dev-dependencies]
env_logger = "0.11.9"
npyz = "0.8.4"
zarrs = { version = "0.23.5", features = ["filesystem"] }
